--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "BSD-3-Clause",
   "description": "A standard library for shareable classes and functions",
-  "keywords": ["mime", "uuid", "php7"],
+  "keywords": ["mime", "mime-types", "uuid", "uuid-generator", "php7"],
   "authors": [
     {
       "name": "Mihail Binev",
