--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "koded/stdlib",
-  "version": "1.0.0",
+  "version": "1.1.0-dev",
   "type": "library",
   "license": "BSD-3-Clause",
   "description": "A standard library for shareable classes and functions",
@@ -19,6 +19,9 @@
     "psr-4": {
       "Koded\\Stdlib\\": ""
     },
+    "files": [
+      "functions.php"
+    ],
     "exclude-from-classmap": [
       "/Tests/"
     ]
@@ -26,5 +29,10 @@
   "require-dev": {
     "phpunit/phpunit": "~6",
     "satooshi/php-coveralls": "~1"
+  },
+  "autoload-dev": {
+    "files": [
+      "functions-dev.php"
+    ]
   }
 }
