- Config::filterNamespace() should trim the key according to $trim argument - fixes the composer autoload namespace - adds a branch alias in composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Koded\\": ""
+      "Koded\\Stdlib\\": ""
     },
     "files": [
       "functions.php"
@@ -33,5 +33,10 @@
     "files": [
       "functions-dev.php"
     ]
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.5.x-dev"
+    }
   }
 }
