- Adds new ExtendedArguments class for dot.array support - Adds `StringSerializable` interface and new json/php simple serializers - Exceptions refactored with static methods for better readability - Config now loads environment variables from .env file - adds 2 new functions (snake_to_camel_case and camel_to_snake_case) - ConfigurationFactory extends Argument interface now

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "library",
   "license": "BSD-3-Clause",
   "description": "A standard library for shareable classes and functions",
-  "keywords": ["mime", "mime-types", "uuid", "uuid-generator", "immutable", "utility", "exceptions", "dto", "php7"],
+  "keywords": ["mime", "mime-types", "uuid", "uuid-generator", "immutable", "utility", "exceptions", "dto", "dot-array", "php7"],
   "authors": [
     {
       "name": "Mihail Binev",
@@ -36,7 +36,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.9.x-dev"
+      "dev-master": "3.x-dev"
     }
   }
 }
