--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,18 @@
   "type": "library",
   "license": "BSD-3-Clause",
   "description": "A standard library for shareable classes and functions",
-  "keywords": ["mime", "mime-types", "uuid", "uuid-generator", "immutable", "utility", "exceptions", "dto", "dot-array", "php7"],
+  "keywords": [
+    "mime",
+    "mime-types",
+    "uuid",
+    "uuid-generator",
+    "immutable",
+    "utility",
+    "exceptions",
+    "dto",
+    "dot-array",
+    "serializer"
+  ],
   "authors": [
     {
       "name": "Mihail Binev",
@@ -12,7 +23,11 @@
   ],
   "require": {
     "php": "^7.1.4",
-    "psr/http-message": "~1"
+    "psr/http-message": "~1",
+    "ext-json": "*",
+    "ext-dom": "*",
+    "ext-libxml": "*",
+    "ext-simplexml": "*"
   },
   "autoload": {
     "psr-4": {
@@ -33,10 +48,5 @@
     "files": [
       "functions-dev.php"
     ]
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "3.x-dev"
-    }
   }
 }
