--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
     "ext-libxml": "*",
     "ext-simplexml": "*"
   },
+  "suggest": {
+    "msgpack": "msgpack module for de/serialization",
+    "igbinary": "igbinary module for de/serialization"
+  },
   "autoload": {
     "psr-4": {
       "Koded\\": ""
@@ -41,8 +45,7 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "~6",
-    "satooshi/php-coveralls": "~1"
+    "phpunit/phpunit": "~7"
   },
   "autoload-dev": {
     "files": [
