- removes the utf8_encode() for XmlSerializer::unserialize() - adds branch-alias

--- a/composer.json
+++ b/composer.json
@@ -51,5 +51,10 @@
     "files": [
       "functions-dev.php"
     ]
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0-dev"
+    }
   }
 }
