--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,13 @@
     }
   ],
   "require": {
-    "php": "^7.1.4",
+    "php": "^7.3",
     "psr/http-message": "~1",
     "ext-json": "*",
     "ext-dom": "*",
     "ext-libxml": "*",
-    "ext-simplexml": "*"
+    "ext-simplexml": "*",
+    "ext-ctype":  "*"
   },
   "suggest": {
     "msgpack": "msgpack module for de/serialization",
@@ -45,9 +46,13 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "~7"
+    "phpunit/phpunit": "~7",
+    "codacy/coverage": "dev-master"
   },
   "autoload-dev": {
+    "psr-4": {
+      "Koded\\": "Tests/"
+    },
     "files": [
       "functions-dev.php"
     ]
