--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 7.1
   - 7.2
   - 7.3
 
@@ -13,7 +12,7 @@ before_script:
   - pecl install msgpack
 
 install:
-  - composer update -o --no-interaction --prefer-stable --ignore-platform-reqs
+  - composer update -o --no-interaction --prefer-stable
 
 script:
   - vendor/bin/phpunit --coverage-clover build/coverage/clover.xml
