--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.2",
     "psr/http-message": "~1",
     "ext-json": "*",
     "ext-dom": "*",
@@ -47,7 +47,7 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.3",
+    "phpunit/phpunit": "~7",
     "codacy/coverage": "dev-master"
   },
   "autoload-dev": {
@@ -60,7 +60,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "4.1-dev"
+      "dev-master": "4.x-dev"
     }
   }
 }
