--- a/composer.json
+++ b/composer.json
@@ -58,5 +58,10 @@
     "files": [
       "functions-dev.php"
     ]
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "5.x-dev"
+    }
   }
 }
