--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "~7.2",
     "psr/http-message": "~1",
     "ext-json": "*",
     "ext-dom": "*",
