--- a/composer.json
+++ b/composer.json
@@ -37,17 +37,12 @@
     "igbinary": "igbinary module for de/serialization"
   },
   "autoload": {
-    "psr-4": {
-      "Koded\\Stdlib\\": "",
-      "Koded\\Exceptions\\": ""
-    },
+    "classmap": ["", "Serializer/"],
     "files": [
       "Interfaces.php",
       "functions.php"
     ],
-    "exclude-from-classmap": [
-      "/Tests/"
-    ]
+    "exclude-from-classmap": ["Tests/"]
   },
   "require-dev": {
     "phpunit/phpunit": "~7",
@@ -60,5 +55,8 @@
     "files": [
       "functions-dev.php"
     ]
+  },
+  "config": {
+    "optimize-autoloader": true
   }
 }
