--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,26 @@ php:
   - 7.2
   - 7.3
   - 7.4
+  - nightly
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: nightly
 
 before_script:
   - pecl install igbinary
   - pecl install msgpack
 
 install:
-  - composer update -o --no-interaction --prefer-stable
+  - composer update -o --no-interaction --prefer-source
+  - wget https://scrutinizer-ci.com/ocular.phar
 
 script:
   - vendor/bin/phpunit --coverage-clover build/coverage/clover.xml
 
-after_success:
-  - travis_retry vendor/bin/codacycoverage clover build/coverage/clover.xml
+after_script:
+  - php ocular.phar code-coverage:upload --format=php-clover build/coverage/clover.xml
 
 sudo: false
 
