--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   ],
   "require": {
     "php": "^8",
-    "psr/http-message": "~1",
+    "psr/http-message": "^1",
     "ext-json": "*",
     "ext-dom": "*",
     "ext-libxml": "*",
@@ -45,7 +45,7 @@
     "exclude-from-classmap": ["Tests/"]
   },
   "require-dev": {
-    "phpunit/phpunit": "~8",
+    "phpunit/phpunit": "^8",
     "phpbench/phpbench": "@dev"
   },
   "autoload-dev": {
