--- a/composer.json
+++ b/composer.json
@@ -39,14 +39,16 @@
   "autoload": {
     "classmap": ["", "Serializer/"],
     "files": [
+      "semver.php",
       "Interfaces.php",
       "functions.php"
     ],
     "exclude-from-classmap": ["Tests/"]
   },
   "require-dev": {
-    "phpunit/phpunit": "^8",
-    "phpbench/phpbench": "@dev"
+    "phpunit/phpunit": "^9",
+    "phpbench/phpbench": "@dev",
+    "scrutinizer/ocular": "dev-master"
   },
   "autoload-dev": {
     "psr-4": {
