--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
-    "phpbench/phpbench": "@dev",
-    "scrutinizer/ocular": "dev-master"
+    "phpbench/phpbench": "@dev"
   },
   "autoload-dev": {
     "psr-4": {
