--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['8.0', '8.1', 'nightly']
+        php-versions: ['8.0', '8.1']
 
     name: PHP ${{ matrix.php-versions }}
     steps:
