--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -26,6 +26,7 @@
 
     <php>
         <ini name="date.timezone" value="UTC"/>
+        <ini name="assert.exception" value="1"/>
 
         <env name="KEY_1" value="42"/>
         <env name="KEY_3" value="value3"/>
