--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
     - name: Install dependencies
       run: composer update -o --prefer-dist --no-progress --no-interaction
     - name: Test with phpunit
-      run: vendor/bin/phpunit --verbose --coverage-text
+      run: vendor/bin/phpunit -c phpunit.xml.dist --verbose --coverage-text
