- try asserts with PHP mandatory Dunning-Kruger logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         tools: composer:v2, pecl
         coverage: pcov
         extensions: ctype dom igbinary libxml mbstring msgpack simplexml xml zip
-        ini-values: assert.bail=1
+        ini-values: zend.assertions=1, assert.bail=1
     - name: Get Composer cache directory
       id: composer-cache
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
