--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,34 +4,44 @@ env:
   timezone: UTC
 jobs:
   build:
+    name: PHP ${{ matrix.php-versions }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
+      fail-fast: false
       matrix:
-        php-versions: ['8.0', '8.1']
-        operating-system: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.operating-system }}
-
-    name: PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }}
+        php-versions: [ '8.0', '8.1' ]
+        os: [Ubuntu, MacOS]
+        experimental: [false]
+        include:
+          - os: MacOS
+            experimental: true
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php-versions }}
-        tools: composer:v2, pecl
-        coverage: pcov
-        extensions: ctype dom igbinary libxml mbstring msgpack simplexml xml zip
-        ini-values: zend.assertions=1, assert.bail=1
-    - name: Get Composer cache directory
-      id: composer-cache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-    - name: cache Composer dependencies
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.composer-cache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-        restore-keys: ${{ runner.os }}-composer-
-    - name: Install project dependencies
-      run: composer update -o --prefer-dist --no-progress --no-interaction
-    - name: Test with phpunit
-      run: vendor/bin/phpunit -c phpunit.xml.dist --verbose --coverage-text
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP ${{ matrix.php-version }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          tools: composer:v2, pecl
+          coverage: pcov
+          extensions: ctype dom igbinary libxml mbstring msgpack simplexml xml zip
+          ini-values: zend.assertions=1, assert.bail=1
+
+      - name: Get Composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: cache Composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install project dependencies
+        run: composer update -o --prefer-dist --no-progress --no-interaction
+
+      - name: Test with phpunit
+        run: vendor/bin/phpunit --verbose --coverage-text
