--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     }
   ],
   "require": {
-    "php": "^8",
-    "psr/http-message": "^1",
+    "php": "^8.1",
     "ext-json": "*",
     "ext-dom": "*",
     "ext-libxml": "*",
@@ -55,6 +54,7 @@
     }
   },
   "config": {
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "sort-packages": true
   }
 }
