--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,17 @@
   "license": "BSD-3-Clause",
   "description": "A standard library for shareable classes and functions",
   "keywords": [
-    "mime",
-    "mime-types",
+    "config",
     "uuid",
     "uuid-generator",
-    "immutable",
     "utility",
-    "exceptions",
-    "dto",
+    "immutable",
     "dot-array",
     "serializer",
-    "config"
+    "dto",
+    "exceptions",
+    "mime",
+    "mime-types"
   ],
   "authors": [
     {
@@ -28,7 +28,7 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "ext-simplexml": "*",
-    "ext-ctype":  "*",
+    "ext-ctype": "*",
     "ext-mbstring": "*"
   },
   "suggest": {
@@ -36,17 +36,22 @@
     "igbinary": "igbinary module for de/serialization"
   },
   "autoload": {
-    "classmap": ["", "Serializer/"],
+    "classmap": [
+      "",
+      "Serializer/"
+    ],
     "files": [
       "semver.php",
       "Interfaces.php",
       "functions.php"
     ],
-    "exclude-from-classmap": ["Tests/"]
+    "exclude-from-classmap": [
+      "Tests/"
+    ]
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
-    "phpbench/phpbench": "@dev"
+    "phpbench/phpbench": "^1"
   },
   "autoload-dev": {
     "psr-4": {
