--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
       "functions.php"
     ],
     "exclude-from-classmap": [
-      "Tests/"
+      "tests/"
     ]
   },
   "require-dev": {
@@ -55,7 +55,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\Koded\\Stdlib\\": "Tests/"
+      "Tests\\Koded\\Stdlib\\": "tests/"
     }
   },
   "config": {
